gitignore updated once more

--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,7 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-# the fucking stupid apple file
+# specific stuff
 .DS_Store
+push_swap_tester/*
+push_swap_visualizer/*
